# src/swagger.json
@@ -383,6 +383,100 @@
         }
       }
     },
+    "/users/getAvatar/{userId}": {
+      "get": {
+        "tags": ["user"],
+        "summary": "Get user avatar",
+        "description": "this endpoint should return user avatar",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "description": "The user id that needs to be fetched.",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "401": {
+            "description": "not authorized"
+          },
+          "500": {
+            "description": "bad requests"
+          }
+        }
+      }
+    },
+
+    "/users/deleteAvatar/{userId}": {
+      "delete": {
+        "tags": ["user"],
+        "summary": "Delete user avatar",
+        "description": "this endpoint should delete user avatar",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "description": "The user id that needs to be fetched.",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "successful operation"
+          },
+          "401": {
+            "description": "not authorized"
+          },
+          "500": {
+            "description": "bad requests"
+          }
+        }
+      }
+    },
+
+    "/users/uploadAvatar/{userId}": {
+      "put": {
+        "tags": ["user"],
+        "summary": "Upload user avatar",
+        "description": "this endpoint should upload user avatar",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "description": "The user id that needs to be fetched.",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "avatar",
+            "in": "formData",
+            "description": "The user avatar that needs to be uploaded.",
+            "required": true,
+            "type": "file"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "401": {
+            "description": "not authorized"
+          },
+          "500": {
+            "description": "bad requests"
+          }
+        }
+      }
+    },
+
     "/customer/{id}": {
       "delete": {
         "tags": ["customer"],
@@ -517,6 +611,78 @@
           },
           "401": {
             "description": "no authorization to view the page"
+          }
+        }
+      }
+    },
+    "/auth/chef/signup/{id}/avatar": {
+      "post": {
+        "tags": ["user"],
+        "summary": "Upload chef avatar",
+        "description": "",
+        "consumes": ["application/json"],
+        "produces": ["application/json", "application/xml"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "The chef id that needs to be fetched.",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "avatar",
+            "in": "formData",
+            "description": "The chef avatar that needs to be uploaded.",
+            "required": true,
+            "type": "file"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "401": {
+            "description": "not authorized"
+          },
+          "500": {
+            "description": "bad requests"
+          }
+        }
+      }
+    },
+    "/auth/customer/signup/{id}/avatar": {
+      "post": {
+        "tags": ["user"],
+        "summary": "Upload customer avatar",
+        "description": "",
+        "consumes": ["application/json"],
+        "produces": ["application/json", "application/xml"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "The customer id that needs to be fetched.",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "avatar",
+            "in": "formData",
+            "description": "The customer avatar that needs to be uploaded.",
+            "required": true,
+            "type": "file"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "401": {
+            "description": "not authorized"
+          },
+          "500": {
+            "description": "bad requests"
           }
         }
       }
@@ -953,6 +1119,171 @@
           },
           "404": {
             "description": "Not found"
+          }
+        }
+      }
+    },
+
+    "/dishes/{dishId}/uploadDishImage": {
+      "post": {
+        "tags": ["dish"],
+        "summary": "upload an image to the server",
+        "description": "This can only be done by the logged in user.",
+        "produces": ["application/json", "application/xml"],
+        "parameters": [
+          {
+            "name": "dishId",
+            "in": "path",
+            "description": "The dish id",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "dish",
+            "in": "formData",
+            "description": "The image to upload",
+            "required": true,
+            "type": "file"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "400": {
+            "description": "bad request"
+          }
+        }
+      }
+    },
+
+    "/dishes/{dishId}/fetchAllDishImages": {
+      "get": {
+        "tags": ["dish"],
+        "summary": "get all images for a specific dish",
+        "description": "This can only be done by the logged in user.",
+        "produces": ["application/json", "application/xml"],
+        "parameters": [
+          {
+            "name": "dishId",
+            "in": "path",
+            "description": "The dish id",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "400": {
+            "description": "bad request"
+          }
+        }
+      }
+    },
+
+    "/dishes/{dishId}/fetchDishImage/{index}": {
+      "get": {
+        "tags": ["dish"],
+        "summary": "get a specific image for a specific dish",
+        "description": "This can only be done by the logged in user.",
+        "produces": ["application/json", "application/xml"],
+        "parameters": [
+          {
+            "name": "dishId",
+            "in": "path",
+            "description": "The dish id",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "index",
+            "in": "path",
+            "description": "The image index",
+            "required": true,
+            "type": "number"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "400": {
+            "description": "bad request"
+          }
+        }
+      }
+    },
+
+    "/dishes/{dishId}/updateDishImage/{index}": {
+      "put": {
+        "tags": ["dish"],
+        "summary": "update an image at index",
+        "description": "This can only be done by the logged in user.",
+        "produces": ["application/json", "application/xml"],
+        "parameters": [
+          {
+            "name": "dishId",
+            "in": "path",
+            "description": "The dish id",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "dish",
+            "in": "formData",
+            "description": "The image to upload",
+            "required": true,
+            "type": "file"
+          },
+          {
+            "name": "index",
+            "in": "path",
+            "description": "The index of the image to update",
+            "required": true,
+            "type": "number"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "400": {
+            "description": "bad request"
+          }
+        }
+      }
+    },
+
+    "/dishes/{dishId}/deleteDishImage/{index}": {
+      "delete": {
+        "tags": ["dish"],
+        "summary": "delete an image from the server",
+        "description": "This can only be done by the logged in user.",
+        "produces": ["application/json", "application/xml"],
+        "parameters": [
+          {
+            "name": "dishId",
+            "in": "path",
+            "description": "The dish id",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "index",
+            "in": "path",
+            "description": "The index of the image to delete",
+            "required": true,
+            "type": "number"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "400": {
+            "description": "bad request"
           }
         }
       }
